@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.57 2005/08/01 13:20:28 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.58 2005/08/01 14:00:34 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -46,6 +46,9 @@ PH/01 Support for SQLite database lookups has been added. This is another
       obtain SQLite support, and you will also need to add -lsqlite3 to the
       EXTRALIBS setting. And of course, you have to install SQLite on your
       host first.
+
+PH/02 The variable $message_id is now deprecated, to be replaced by
+      $message_exim_id, which makes it clearer which ID is being referenced.
 
 
 Exim version 4.52
